--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
     </dependencies>
 
     <properties>
